--- a/GoIT/markup/home/Advanced/bazinger/style.css
+++ b/GoIT/markup/home/Advanced/bazinger/style.css
@@ -61,7 +61,7 @@ body{
     background-image: url(pics/video_base.jpg);
     font-size: 18px;
     color: #fff;
-    padding-top: 160px
+    padding-top: 160px;
 }
 
 .video-button{
@@ -82,7 +82,7 @@ body{
 
 .video-title{
     font-size: 48px;
-    text-shadow: 0px 1px 3px rgba(25, 22, 24, 0.36);
+    text-shadow: 0 1px 3px rgba(25, 22, 24, 0.36);
     font-weight: 300;
     text-align: center !important;
     padding-top: 35px;
@@ -97,8 +97,84 @@ body{
     padding: 25px 395px;
 }
 
+#prices {
+    background-color: #fff;
+    width: 100%;
+    height: 710px;
+    text-align: center;
+    font-size: 20px;
+}
+
+#prices h1 {
+    font-size: 36px;
+    font-weight: 800;
+    margin-top: 65px;
+    margin-bottom: 5px;
+}
+
+.basic_package {
+    width: 300px;
+    height: 415px;
+    background-color: #f9f9f9;
+    border: #dad7d7 solid 1px;
+    border-radius: 4px;
+    color: #dcdcdc;
+}
+
+div.pack_head_1 {
+    width: 100%;
+    height: 70px;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 70px;
+}
+
+.price > div {
+    height: 460px;
+}
+
+div.price {
+    width: 100%;
+    height: 115px;
+    background-color: #91c46b;
+    color: #fff;
+    font-family: "Microsoft New Tai Lue";
+    font-weight: 700;
+    font-size: 85px;
+    line-height: 115px;
+}
+
+.basic_package > div p {
+    vertical-align: middle;
+}
+
+.basic_package > p {
+    font-size: 18px;
+    font-family: "Lato";
+    color: #dcdcdc;
+    font-weight: bold;
+}
+
+.basic_package > input {
+    width: 171px;
+    height: 49px;
+    color: #fefefe;
+    background-color: #91c46b;
+    border: none;
+    border-radius: 2px;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+margin: auto
+
+27
+px
+
+;
+
 #download{
-    weight: inherit;
+    weight: 100%;
     height: 209px;
     background-color: #414042;
 }
