--- a/GoIT/markup/home/lesson4/style.css
+++ b/GoIT/markup/home/lesson4/style.css
@@ -6,24 +6,47 @@
     margin-top: 10px;
 }
 
-.task1 nav, .task2 nav {
+/*.task1 nav, .task2 nav {*/
+/*width: 900px;*/
+/*margin-left: 60px;*/
+/*font-size: 23px;*/
+/*font-family: Impact;*/
+/*}*/
+
+/*.task1 a, .task2 a{*/
+/*display: inline-block;*/
+/*margin-top: 0;*/
+/*padding: 0 10px;*/
+/*line-height: 38px;*/
+/*color: #fff;*/
+/*text-decoration: none;*/
+/*}*/
+
+/*.task1 a:hover, .task2 a:hover {*/
+/*background-color: #eee;*/
+/*color: #a0a0a0;*/
+/*text-decoration: none;*/
+/*}*/
+
+.task1 ul, .task2 ul {
     width: 900px;
-    margin-left: 60px;
-    color: #fff;
+    margin: 0 0 0 60px;
     font-size: 23px;
     font-family: Impact;
 }
 
-.task1 span, .task2 span {
+.task1 li, .task2 li {
     display: inline-block;
-    margin-top: 0;
     padding: 0 10px;
     line-height: 38px;
+    color: #fff;
+    text-decoration: none;
 }
 
-.task1 span:hover, .task2 span:hover {
+.task1 li:hover, .task2 li:hover {
     background-color: #eee;
     color: #a0a0a0;
+    text-decoration: none;
 }
 
 .right {
