--- a/GoIT/markup/home/lesson4/style.css
+++ b/GoIT/markup/home/lesson4/style.css
@@ -28,11 +28,19 @@
 /*text-decoration: none;*/
 /*}*/
 
-.task1 ul, .task2 ul {
+.task1 ul {
     width: 900px;
-    margin: 0 0 0 60px;
+    margin: 0 auto;
     font-size: 23px;
     font-family: Impact;
+}
+
+.task2 ul {
+    width: 900px;
+    margin: 0 auto;
+    font-size: 23px;
+    font-family: Impact;
+    float: left;
 }
 
 .task1 li, .task2 li {
