--- a/GoIT/markup/home/lesson5/style.css
+++ b/GoIT/markup/home/lesson5/style.css
@@ -1,3 +1,57 @@
+body, div, dl, dt, dd, ul, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, input, textarea, p, blockquote, th, td, menu {
+    margin: 0;
+    padding: 0;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+fieldset, img, abbr {
+    border: 0;
+}
+
+address, caption, cite, code, dfn, em, strong, th, var {
+    font-style: normal;
+    font-weight: normal;
+}
+
+ul li {
+    list-style: none;
+}
+
+caption, th {
+    text-align: left;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+    font-weight: normal;
+}
+
+sup {
+    vertical-align: text-top;
+}
+
+sub {
+    vertical-align: text-bottom;
+}
+
+input, textarea, select {
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+legend {
+    color: #000;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
 /*task1*/
 div, li, ul{
     margin: 0;
@@ -14,7 +68,7 @@ div, li, ul{
 
 .task1 ul[class="menu"]{
     width: 900px;
-    margin: 0 0 0 60px;
+    margin: 0 auto;
     font-size: 23px;
     list-style: none;
 }
@@ -37,7 +91,7 @@ div, li, ul{
 }
 
 .task1 ul[class="menu"]>li:hover ul[class="submenu"]{
-    display: inline-block;
+    display: block;
     position: absolute;
     width: 100%;
     list-style: none;
