--- a/GoIT/markup/home/lesson6/style.css
+++ b/GoIT/markup/home/lesson6/style.css
@@ -19,33 +19,169 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+/*task1*/
+body.task1 {
+    width: 1400px;
+    height: auto;
+    background: #fff;
+    font-family: "Trebuchet MS", sans-serif;
+    font-weight: normal;
+}
+
+.task1 h1 {
+    margin-top: 55px;
+    text-align: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #41525c;
+    font-weight: 600;
+}
+
+.task1 > .price {
+    width: 900px;
+    height: 470px;
+    position: relative;
+    margin: 55px auto;
+}
+
+.task1 .price-item {
+    display: inline-block;
+    float: left;
+    left: position: relative;
+    width: 288px;
+    height: auto;
+    margin: 0 auto;
+    border: 4px solid #ee8129;
+    border-radius: 4px;
+    font-family: "Trebuchet MS", sans-serif;
+    font-size: 25px;
+    box-shadow: 0px 0px 5px 2px rgba(205, 226, 238, 1);
+}
+
+.task1 .price-item:first-child, .task1 .price-item:last-child {
+    border: 1px solid #e8eaec;
+    position: relative;
+    top: 13px;
+    box-shadow: none;
+    left: 3px;
+    z-index: -10;
+}
+
+.task1 li.price-item:last-child {
+    left: -3px;
+}
+
+.task1 .price-item-header {
+    position: relative;
+    width: 100%;
+    height: 73px;
+    background-color: #ee8129;
+    color: #fff;
+    line-height: 73px;
+    margin: 0;
+    border: none;
+    border-radius: initial;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.task1 .price-item:first-child .price-item-header {
+    background-color: #37c2d3;
+    height: 63px;
+    line-height: 63px;
+}
+
+.task1 .price-item:last-child .price-item-header {
+    background-color: #1cb79a;
+    height: 63px;
+}
+
+.task1 .price-item-description {
+    width: 100%;
+    color: #000;
+    text-align: center;
+}
+
+.task1 .price-item-description p {
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.task1 .price-item-description span {
+    display: inline-block;
+    font-size: 72px;
+    font-weight: bold;
+    color: #364959;
+}
+
+.task1 .price-item-description span:first-of-type {
+    display: inline-block;
+    font-size: 15px;
+    position: relative;
+    bottom: 38px;
+}
+
+.task1 .price-item-description span:last-of-type {
+    display: inline-block;
+    font-size: 15px;
+    position: relative;
+    bottom: -5px;
+    margin-bottom: 7px;
+}
+
+.task1 .price-item-description ul {
+    width: 259px;
+    font-size: 15px;
+    margin: 18px auto;
+    list-style-position: inside;
+    list-style-type: none;
+}
+
+.task1 .price-item-description li {
+    display: list-item;
+    color: #888c94;
+    background-color: #edf5fd;
+    margin: 1px auto;
+    text-align: left;
+    padding: 7px 0 7px 55px;
+}
+
+.task1 .price-item-description li:before {
     display: block;
+    float: left;
+    width: 40px;
+    height: 40px;
+    content: ' ';
+    background: url(http://i643.photobucket.com/albums/uu160/pandemic87/check.png) no-repeat;
+    background-size: cover;
+    margin: -10px 5px 0 -35px;
 }
 
-body {
-    line-height: 1;
+.task1 .price-item-description li:nth-child(even) {
+    background-color: #f5f5f6;
 }
 
-ol, ul {
-    list-style: none;
+.task1 .price-item-description input {
+    width: 252px;
+    height: 38px;
+    background-color: #ee8129;
+    color: #fff;
+    font-family: "Trebuchet MS", sans-serif;
+    font-size: 15px;
+    border: none;
+    border-radius: 3px;
+    margin-bottom: 33px;
+    box-shadow: 0 3px 0 rgba(179, 86, 11, 1), -1px 0 0 rgba(237, 195, 161, 1);
 }
 
-blockquote, q {
-    quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+.task1 .price-item:first-child input, .task1 .price-item:last-child input {
+    margin-bottom: 23px;
+    background-color: #3371a6;
+    box-shadow: 0 3px 0 rgba(22, 67, 106, 1), -1px 0 0 rgba(165, 189, 207, 1);
 }
 
 /*task2*/
