--- a/GoIT/markup/home/lesson7/style.css
+++ b/GoIT/markup/home/lesson7/style.css
@@ -20,18 +20,159 @@ time, mark, audio, video {
 }
 
 body {
-    background-color: #fff;
+    background-color: #000;
+    z-index: -50;
 }
 
-/*pricing*/
-#pricing {
+.landing {
+    position: relative;
     width: 1400px;
+    height: auto;
+    background: #fff;
+    margin: 0 auto;
+    z-index: -50;
+}
+
+/*NAVIGATION*/
+.navigation {
+    position: fixed;
+    width: 1400px;
+    height: auto;
+    background-color: #fff;
+    top: 0;
+    z-index: 50;
+}
+
+@font-face {
+    font-family: "FuturaBT-Book";
+    src: url(fonts/FuturaBT-Book.ttf)
+}
+
+.navigation-logo {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width: 440px;
+    height: 115px;
+    padding-left: 190px;
+    font-family: "FuturaBT-Book", sans-serif;
+    font-size: 36px;
+    color: #ee8129;
+    float: left;
+    line-height: 115px;
+}
+
+@font-face {
+    font-family: "FuturaBT-Heavy";
+    src: url(fonts/FuturaBT-Heavy.ttf)
+}
+
+.navigation-logo span {
+    font-family: "FuturaBT-Heavy", sans-serif;
+    color: #3070a8;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.navigation nav {
+    position: relative;
+    width: 700px;
+    height: auto;
+    overflow: hidden;
+    bottom: 0;
+    line-height: 1px;
+}
+
+@font-face {
+    font-family: "OpenSans";
+    src: url(fonts/OpenSans.ttf)
+}
+
+.navigation nav > a {
+    height: 55px;
+    text-transform: uppercase;
+    font-family: "OpenSans", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    display: inline-block;
+    padding: 60px 15px 0 19px;
+    text-decoration: none;
+    position: relative;
+    bottom: 0;
+    color: #989898;
+}
+
+.navigation nav > a:hover {
+    border-bottom: 4px solid #3070a8;
+    height: 51px;
+    color: #3070a8;
+}
+
+/*HOME*/
+#home {
+    position: relative;
+    margin-top: 115px;
+    width: 100%;
+    height: 585px;
+    color: #fff;
+    background: transparent url("img/home-banner.jpg") no-repeat scroll 0% 34% / cover;
+}
+
+#home h1 {
+    font-family: "FuturaBT-Book", sans-serif;
+    font-size: 40px;
+    text-align: center;
+    width: 880px;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 150px;
+    position: relative;
+}
+
+#home h1 > span {
+    font-family: "FuturaBT-Heavy", sans-serif;
+    font-size: 48px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#home > p {
+    padding-top: 10px;
+    margin: 0 auto;
+    font-family: Calibri, sans-serif;
+    font-style: italic;
+    font-size: 20px;
+    text-align: center;
+    width: 600px;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.26);
+}
+
+input[name="home_submit"] {
+    position: absolute;
+    bottom: 108px;
+    left: 0px;
+    right: 0px;
+    margin: 0 auto;
+    width: 245px;
+    height: 57px;
+    background: transparent;
+    border: 1px #808181 solid;
+    font-family: "OpenSans", sans-serif;
+    font-size: 16px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+/*PRICING*/
+#pricing {
+    position: relative;
+    width: 100%;
     height: auto;
     font-family: "Trebuchet MS", sans-serif;
     font-weight: normal;
 }
 
-h1 {
+#pricing h1 {
     margin-top: 55px;
     text-align: center;
     font-size: 30px;
@@ -181,15 +322,15 @@ li.price-item:last-child {
     box-shadow: 0 3px 0 rgba(179, 86, 11, 1), -1px 0 0 rgba(237, 195, 161, 1);
 }
 
-.price-item:first-child input, .task1 .price-item:last-child input {
+.price-item:first-child input, .price-item:last-child input {
     margin-bottom: 23px;
     background-color: #3371a6;
     box-shadow: 0 3px 0 rgba(22, 67, 106, 1), -1px 0 0 rgba(165, 189, 207, 1);
 }
 
 /*testimonials*/
-.testimonials {
-    width: 1402px;
+#testimonials {
+    width: 100%;
     height: auto;
     background: url("img/testimonials_background.jpg") repeat-y;
     font-family: "Trebuchet MS", sans-serif;
@@ -213,7 +354,7 @@ li.price-item:last-child {
     z-index: -10;
 }
 
-.testimonials h1 {
+#testimonials h1 {
     font-size: 40px;
     color: #3170a8;
     text-transform: uppercase;
@@ -221,7 +362,7 @@ li.price-item:last-child {
     padding: 50px 0 10px;
 }
 
-.testimonials span {
+#testimonials span {
     color: #ee8129;
 }
 
