--- a/GoIT/markup/home/Project_1/style.css
+++ b/GoIT/markup/home/Project_1/style.css
@@ -45,7 +45,7 @@ body {
 
 @font-face {
     font-family: "FuturaBT-Book";
-    src: url(../lesson7/fonts/FuturaBT-Book.ttf)
+    src: url(fonts/FuturaBT-Book.ttf)
 }
 
 .navigation-logo {
@@ -64,7 +64,7 @@ body {
 
 @font-face {
     font-family: "FuturaBT-Heavy";
-    src: url(../lesson7/fonts/FuturaBT-Heavy.ttf)
+    src: url(fonts/FuturaBT-Heavy.ttf)
 }
 
 .navigation-logo span {
@@ -115,7 +115,7 @@ body {
     width: 100%;
     height: 585px;
     color: #fff;
-    background: transparent url("../lesson7/img/home-banner.jpg") no-repeat scroll 0% 34% / cover;
+    background: transparent url("img/home-banner.jpg") no-repeat scroll 0% 34% / cover;
 }
 
 #home h1 {
@@ -332,7 +332,7 @@ li.price-item:last-child {
 #testimonials {
     width: 100%;
     height: auto;
-    background: url("../lesson7/img/testimonials_background.jpg") repeat-y;
+    background: url("img/testimonials_background.jpg") repeat-y;
     font-family: "Trebuchet MS", sans-serif;
     position: relative;
     z-index: -30;
