--- a/GoIT/markup/home/Project_1/style.css
+++ b/GoIT/markup/home/Project_1/style.css
@@ -163,6 +163,12 @@ input[name="home_submit"] {
     text-transform: uppercase;
 }
 
+#about {
+    width: 100%;
+    height: 565px;
+    position: relative;
+}
+
 /*PRICING*/
 #pricing {
     position: relative;
