--- a/GoIT/markup/home/lesson8/style.css
+++ b/GoIT/markup/home/lesson8/style.css
@@ -106,6 +106,7 @@ time, mark, audio, video {
     min-width: 305px;
     height: 54px;
     background-color: #ffcc66;
+    background: linear-gradient(to bottom, #ffcb53, #eaba4c);
     color: #000;
     position: relative;
     top: 20px;
@@ -145,15 +146,16 @@ time, mark, audio, video {
     border-bottom: 1px #000 dotted;
 }
 
-/*.search_arrow2:after {*/
-/*content: "";*/
-/*width: 0px;*/
-/*height: 0px;*/
-/*display: block;*/
-/*border-top: 27px solid transparent;*/
-/*border-bottom: 27px solid transparent;*/
-/*border-left: 14px solid #ffcc66;*/
-/*position: absolute;*/
-/*left: 100%;*/
-/*top: 0;*/
-/*}*/
+.search_arrow2:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    display: block;
+    border-top: 28px solid #fff;
+    border-right: 1px solid #fff;
+    border-bottom: 28px solid #fff;
+    border-left: 14px solid transparent;
+    position: absolute;
+    left: calc(100% - 14px);
+    top: 0;
+}
