--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -105,7 +105,7 @@ body {
     z-index: 10;
 }
 
-.navigation-submenu:before {
+.navigation-submenu::before {
     content: '';
     width: 0;
     height: 0;
@@ -113,7 +113,18 @@ body {
     border-top: 7px #e0e0e0 solid;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 27px;
+}
+
+.navigation-submenu::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border: 7px transparent solid;
+    border-top: 7px #f5f5f5 solid;
+    position: absolute;
+    top: -1px;
+    left: 27px;
     z-index: 10;
 }
 
@@ -188,6 +199,8 @@ div.navigation-menu-tab:hover .navigation-submenu {
     box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 20px 10px -18px #000;;
+    box-shadow: 0px 20px 10px -18px #000;;
 }
 
 .ad-item-img {
@@ -493,16 +506,22 @@ div.navigation-menu-tab:hover .navigation-submenu {
 
 .content-body {
     width: 100%;
+    height: 269px;
     border: 1px solid #efefef;
     border-radius: 3px;
     background-color: #fff;
+}
+
+.text-highlight {
+    background-color: #ffe7b9;
 }
 
 .content-body-tabs-header {
     background: linear-gradient(to bottom, #fdfdfd, #f8f8f8);
     white-space: nowrap;
     font-size: 0;
-    border: 1px solid #efefef;
+    border-bottom: 1px solid #efefef;
+    padding: 0;
 }
 
 .content-body-tabs-item {
@@ -512,12 +531,92 @@ div.navigation-menu-tab:hover .navigation-submenu {
     font-weight: normal;
     font-size: 14px;
     color: #999;
-    border-left: 1px solid #efefef;
     border-right: 1px solid #efefef;
-    background: linear-gradient(to bottom, #fdfdfd, #f8f8f8);
 }
 
+/*как убрать нижний бордер у активной кнопки*/
 .content-body-tabs-item-selected {
     color: #000;
     background-color: #fff;
+}
+
+.content-body-tabs-content {
+    display: none;
+}
+
+.content-body-tabs-content-selected {
+    display: block;
+    position: relative;
+    height: auto;
+}
+
+.content-body-head {
+    position: relative;
+    margin: 25px 20px 0;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.content-body-list {
+    display: list-item;
+    padding: 10px;
+    position: relative;
+    float: left;
+    margin: 0 135px 0 25px;
+    list-style-type: none;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+}
+
+.content-body-list li::before {
+    content: ">";
+    color: #ccc;
+    font-size: 10px;
+    font-weight: 900;
+    margin-right: 10px;
+}
+
+.content-body-item {
+    position: relative;
+    float: left;
+    width: 260px;
+    margin: 12px 15px;
+}
+
+.content-body-item-img {
+    position: relative;
+    display: inline-block;
+    width: 116px;
+    height: 93px;
+    float: left;
+    border: 1px solid #f1f1f1;
+    padding: 2px;
+    margin-right: 8px;
+}
+
+.content-body-item-head, .content-body-item-text {
+    display: inline-block;
+    position: relative;
+    color: #000;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    width: 130px;
+}
+
+.content-body-item-head {
+    font-weight: bold;
+}
+
+/*FOOTER*/
+.footer-item {
+    display: inline-block;
+    position: relative;
+    float: left;
+}
+
+.footer-item-title {
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    color: #ffad19;
 }
