--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -487,7 +487,6 @@ div.navigation-menu-tab:hover .navigation-submenu {
     font-size: 36px;
 }
 
-/*вот когда бэк задать однотонный, то все работает*/
 .articles-body-item-head-pic-hover-download {
     position: absolute;
     width: inherit;
@@ -529,7 +528,6 @@ div.navigation-menu-tab:hover .navigation-submenu {
 }
 
 /*CONTENT*/
-
 .content {
     position: relative;
     height: auto;
@@ -643,10 +641,9 @@ div.navigation-menu-tab:hover .navigation-submenu {
 }
 
 /*FOOTER*/
-
 footer {
     width: 100%;
-    height: 243px;
+    height: inherit;
 }
 
 .footer-item {
@@ -685,11 +682,18 @@ footer {
 }
 
 .footer-item:last-child li::before {
-    position: relative;
-    top: 8px;
-    content: url(img/icon-doc.png);
-    margin-left: 2px;
-    margin-right: 8px;
+    /*position: relative;*/
+    /*top: 8px;*/
+    /*content: url(img/icon-doc.png);*/
+    /*margin-left: 2px;*/
+    /*margin-right: 8px;*/
+    display: block;
+    float: left;
+    content: " ";
+    background: transparent url("img/icon-doc.png") no-repeat scroll 0% 0% / cover;
+    margin: 4px 5px 0px 0px;
+    width: 24px;
+    height: 20px;
 }
 
 .footer-item li:last-child {
@@ -711,9 +715,7 @@ footer {
 .footer-item-list-latest-link {
     font-size: 11px;
     color: #aaa;
-    display: inline-block;
     position: relative;
-    left: 38px;
 }
 
 
