--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -22,6 +22,20 @@ a {
     text-decoration: none;
 }
 
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+
 body {
     width: 100%;
     background-image: url(img/body-background.jpg);
@@ -716,6 +730,7 @@ footer {
     font-size: 11px;
     color: #aaa;
     position: relative;
+    line-height: 16px;
 }
 
 
