--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -219,7 +219,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
 
 .ad-item-img {
     position: relative;
-    width: auto;
+    width: 292px;
     height: 189px;
     margin: 5px;
     background-image: url("img/spider-man.jpg");
@@ -392,6 +392,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
     top: 0;
     width: 100%;
     height: auto;
+    margin-bottom: 30px;
 }
 
 .articles-title {
@@ -554,6 +555,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
     border: 1px solid #efefef;
     border-radius: 3px;
     background-color: #fff;
+    margin: 19px 0 32px;
 }
 
 .text-highlight {
@@ -657,7 +659,6 @@ div.navigation-menu-tab:hover .navigation-submenu {
 /*FOOTER*/
 footer {
     width: 100%;
-    height: inherit;
 }
 
 .footer-item {
@@ -669,7 +670,7 @@ footer {
 
 .footer-item:last-child {
     overflow: hidden;
-    width: auto;
+    width: 490px;
 }
 
 .footer-item-title {
@@ -688,19 +689,18 @@ footer {
     list-style-position: inside;
 }
 
-.footer-item li {
+div.footer-item li {
     position: relative;
     border-bottom: 1px solid #e5e5e5;
     padding: 6px 2px;
     margin-bottom: 5px;
 }
 
-.footer-item:last-child li::before {
-    /*position: relative;*/
-    /*top: 8px;*/
-    /*content: url(img/icon-doc.png);*/
-    /*margin-left: 2px;*/
-    /*margin-right: 8px;*/
+div.footer-item li:last-child {
+    border: none;
+}
+
+div.footer-item:last-child li::before {
     display: block;
     float: left;
     content: " ";
@@ -710,11 +710,6 @@ footer {
     height: 20px;
 }
 
-.footer-item li:last-child {
-    border: none;
-}
-
-
 .footer-item-list-link, .footer-item-list-latest-title {
     font-family: Arial, sans-serif;
     font-size: 12px;
@@ -722,15 +717,25 @@ footer {
     color: #666;
 }
 
-.footer-item-2 {
+div.footer-item-2 {
     margin: 0 45px 0 64px;
 }
 
-.footer-item-list-latest-link {
+span.footer-item-list-latest-title {
+    line-height: 16px;
+}
+
+a.footer-item-list-latest-link {
     font-size: 11px;
     color: #aaa;
     position: relative;
     line-height: 16px;
+    display: block;
+    margin: 5px 0 0 30px;
 }
 
+.footer-item-list-latest-link:hover, .footer-item-list-link:hover {
+    font-weight: bold;
+    color: #000;
+}
 
