--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -43,6 +43,7 @@ body {
 }
 
 .wrapper {
+    position: relative;
     width: 974px;
     background-color: #fff;
     margin: 60px auto 84px;
@@ -50,7 +51,37 @@ body {
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
     -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
-    border-radius: 3px
+    border-radius: 3px;
+}
+
+.wrapper:before,
+.wrapper:after {
+    content: "";
+    position: absolute;
+    z-index: -2;
+    left: 8px;
+    width: 51%;
+    height: 2%;
+    max-width: 244px;
+    top: 97%;
+    box-shadow: 0px 17px 10px rgba(0, 0, 0, 0.7);
+    -webkit-box-shadow: 0 17px 10px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 0 17px 10px rgba(0, 0, 0, 0.7);
+    -webkit-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    -ms-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+}
+
+.wrapper:after {
+    right: 7px;
+    left: auto;
+    -webkit-transform: rotate(3deg);
+    -moz-transform: rotate(3deg);
+    -ms-transform: rotate(3deg);
+    -o-transform: rotate(3deg);
+    transform: rotate(3deg);
 }
 
 /*NAVIGATION*/
@@ -194,6 +225,11 @@ div.navigation-menu-tab:hover .navigation-submenu {
     cursor: pointer;
 }
 
+.navigation-menu-button:hover {
+    color: #BB1818;
+    background: linear-gradient(to bottom, #dda432, #dd9a22);
+}
+
 /*ADS*/
 
 .ad {
@@ -234,6 +270,10 @@ div.navigation-menu-tab:hover .navigation-submenu {
     height: 49px;
     border-radius: 3px;
     margin-right: 3px;
+}
+
+.ad-item-bar-arrow:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .ad-item-bar {
@@ -462,10 +502,10 @@ div.navigation-menu-tab:hover .navigation-submenu {
     background: linear-gradient(to bottom, #fefefe, #dadada);
     border-radius: 100%;
     box-shadow: 0px 1px 2px #000, 0px 0px 0px 5px rgba(0, 0, 0, 0.3);
-    -webkit-transition-duration: 0.1s;
-    -o-transition-duration: 0.1s;
-    -moz-transition-duration: 0.1s;
-    transition-duration: 0.1s;
+    /*-webkit-transition-duration: 0.1s;*/
+    /*-o-transition-duration: 0.1s;*/
+    /*-moz-transition-duration: 0.1s;*/
+    /*transition-duration: 0.1s;*/
 }
 
 .circle-button:hover {
@@ -473,6 +513,10 @@ div.navigation-menu-tab:hover .navigation-submenu {
     width: 44px;
     height: 44px;
     box-shadow: 0px 1px 2px #000, 0px 0px 0px 7px rgba(0, 0, 0, 0.3);
+    -webkit-transition-duration: 0.1s;
+    -o-transition-duration: 0.1s;
+    -moz-transition-duration: 0.1s;
+    transition-duration: 0.1s;
 }
 
 .articles-body-item-head-pic-hover-arrow {
