--- a/GoIT/markup/exam/exam2/style.css
+++ b/GoIT/markup/exam/exam2/style.css
@@ -656,6 +656,8 @@ div.navigation-menu-tab:hover .navigation-submenu {
     height: auto;
     color: #000;
     font-size: 20px;
+    width: 100%;
+    white-space: normal;
 }
 
 .content-body-tabs-content.active {
@@ -677,7 +679,8 @@ div.navigation-menu-tab:hover .navigation-submenu {
     display: none;
 }
 
-.content-body-tabs-item[data *= "two"]:hover ~ .content-body-tabs-item[data *= "one"], .content-body-tabs-item[data *= "three"]:hover ~ .content-body-tabs-item[data *= "one"] {
+.content-body-tabs-item[data *= "two"]:hover ~ .content-body-tabs-item[data *= "one"],
+.content-body-tabs-item[data *= "three"]:hover ~ .content-body-tabs-item[data *= "one"] {
     color: #999;
     background-color: transparent;
     bottom: 0;
@@ -697,14 +700,15 @@ div.navigation-menu-tab:hover .navigation-submenu {
     margin: 25px 20px 0;
     padding-bottom: 7px;
     border-bottom: 1px solid #e5e5e5;
+    width: 96%;
 }
 
 .content-body-list {
     display: list-item;
-    padding: 10px;
+    padding: 10px 5px;
     position: relative;
     float: left;
-    margin: 0 135px 0 25px;
+    margin: 0 152px 0 25px;
     list-style-type: none;
     font-family: Arial, sans-serif;
     font-size: 12px;
@@ -714,7 +718,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
 .content-body-list li::before {
     content: ">";
     color: #ccc;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: 900;
     margin-right: 10px;
 }
@@ -722,8 +726,8 @@ div.navigation-menu-tab:hover .navigation-submenu {
 .content-body-item {
     position: relative;
     float: left;
-    width: 260px;
-    margin: 12px 15px;
+    width: 282px;
+    margin: 12px 17px;
 }
 
 .content-body-item-img {
@@ -740,7 +744,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
 .content-body-item-description {
     overflow: hidden;
     position: relative;
-    width: 130px;
+    width: 150px;
 }
 
 .content-body-item-description-head,
@@ -750,9 +754,7 @@ div.navigation-menu-tab:hover .navigation-submenu {
     font-size: 12px;
     font-weight: normal;
     position: relative;
-    display: block;
-    width: inherit;
-    word-wrap: break-word;
+    line-height: 1.5em;
 }
 
 .content-body-item-description-head {
